--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Salesforce plugin for Seneca",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/turbo test"
+    "test": "./node_modules/.bin/turbo test",
+    "coverage": "./node_modules/.bin/istanbul cover --dir cov-unit ./node_modules/.bin/turbo -- test && ./node_modules/.bin/istanbul report && echo \"See html coverage at: ./coverage/lcov-report/index.html\""
   },
   "keywords": [
     "seneca",
@@ -13,6 +14,8 @@
   "author": "Damian Beresford <@dberesford>",
   "license": "MIT",
   "devDependencies": {
+    "istanbul": "^0.3.14",
+    "proxyquire": "^1.5.0",
     "turbo-test-runner": "0.5.0"
   },
   "dependencies": {
