--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/turbo test",
-    "coverage": "./node_modules/.bin/istanbul cover --dir cov-unit ./node_modules/.bin/turbo -- test && ./node_modules/.bin/istanbul report && echo \"See html coverage at: ./coverage/lcov-report/index.html\""
+    "coverage": "./node_modules/.bin/istanbul cover --dir cov-unit ./node_modules/.bin/turbo -- test && ./node_modules/.bin/istanbul report && echo \"See html coverage at: ./coverage/lcov-report/index.html\"",
+    "semistandard": "./node_modules/.bin/semistandard index.js salesforce.js"
   },
+  "pre-commit": [
+    "semistandard",
+    "test"
+  ],
   "keywords": [
     "seneca",
     "salesforce"
@@ -15,7 +20,9 @@
   "license": "MIT",
   "devDependencies": {
     "istanbul": "^0.3.14",
+    "pre-commit": "^1.0.7",
     "proxyquire": "^1.5.0",
+    "semistandard": "^4.2.0",
     "turbo-test-runner": "0.5.0"
   },
   "dependencies": {
